RESOLVED FIXED308543
Fix inconsistency between marker position info and marker resources
https://bugs.webkit.org/show_bug.cgi?id=308543
Summary Fix inconsistency between marker position info and marker resources
Rob Buis
Reported 2026-02-24 03:59:00 PST
Fix inconsistency between marker position info and marker resources.
Attachments
Rob Buis
Comment 1 2026-02-24 04:20:38 PST
Radar WebKit Bug Importer
Comment 2 2026-03-03 03:59:10 PST
EWS
Comment 3 2026-03-03 05:54:52 PST
Committed 308541@main (a10422abf224): <https://commits.webkit.org/308541@main> Reviewed commits have been landed. Closing PR #59321 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.