Fix inconsistency between marker position info and marker resources https://bugs.webkit.org/show_bug.cgi?id=308543

Reviewed by Brent Fulgham.

After 307282@main non-scaling-stroke repaint logic was changed to not rely
as much on cached repaint bounding boxes. This exposes a problem where as
part of repainting after layout, marker rects are being calculated on basis
of out of date marker position data, i.e. in the test case marker position
information was still present but the marker itself was already removed as a used resource
(because the marker-start attribute was removed), leading to an ASSERT being hit, since some
places assume if there is marker position information we must have marker resources.

To fix this, clear the marker position information when all marker properties are removed.

Test: svg/non-scaling-stroke-with-dynamic-marker.svg

* LayoutTests/svg/non-scaling-stroke-with-dynamic-marker-expected.txt: Added.
* LayoutTests/svg/non-scaling-stroke-with-dynamic-marker.svg: Added.
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGPath.cpp:
(WebCore::LegacyRenderSVGPath::styleDidChange):

Canonical link: https://commits.webkit.org/308541@main