Source/WebCore/rendering/svg/legacy/LegacyRenderSVGPath.cpp
@@ -309,6 +309,8 @@ bool LegacyRenderSVGPath::isRenderingDisabled() const
 
 void LegacyRenderSVGPath::styleDidChange(Style::Difference diff, const RenderStyle* oldStyle)
 {
+    if (oldStyle && oldStyle->hasMarkers() && !style().hasMarkers())
+        m_markerPositions.clear();
     if (RefPtr pathElement = dynamicDowncast<SVGPathElement>(graphicsElement())) {
         if (!oldStyle || style().d() != oldStyle->d())
             pathElement->pathDidChange();
